ecmascript/parser/tests/test262-error-references/fail/29fb02620b662387.js.stderr
error: Destructuring bindings require initializers
 --> $DIR/tests/test262-parser/fail/29fb02620b662387.js:1:9
  |
1 | for(let [let];;);
  |         ^^^^^

